Migrating unit tests to integration tests so they run for all jdks